# prost-bench

./: Cargo.toml  README.md  build.rs
proto/: complex.proto  get.proto  simple.proto
src/proto/: mod.rs
src/proto/prost/: complex.rs  get.rs  simple.rs  wrapper_complex.rs  wrapper_get.rs  wrapper_simple.rs
src/proto/protobuf/: complex.rs  complex_grpc.rs  get.rs  get_grpc.rs  simple.rs  simple_grpc.rs
