[package]
name = "prost-bench"
version = "0.1.0"
authors = ["Nick Cameron <nrc@ncameron.org>"]
edition = "2018"
build = "build.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "proto"
path = "src/bin/proto.rs"

[dependencies]
futures = "0.1"
grpcio = { version = "0.5.0-alpha.1", features = [ "secure", "prost-codec" ], default-features = false }
protobuf = "2"
prost = "0.5"
prost-derive = "0.5"
bytes = "0.4"
lazy_static = "1.3"

[build-dependencies]
protobuf-build = { git = "https://github.com/tikv/protobuf-build.git" }
