[package]
name = "prost-bench"
version = "0.1.0"
authors = ["Nick Cameron <nrc@ncameron.org>"]
edition = "2018"
build = "build.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "proto"
path = "src/bin/proto.rs"

[dependencies]
futures = "0.1"
grpcio = { version = "0.5.0-alpha.1", path = "../grpc-rs", features = [ "secure", "prost-codec" ], default-features = false }
protobuf = "2"
prost = { version = "0.5" }
prost-derive = { version = "0.5" }
bytes = "0.4"
lazy_static = "1.3"

[build-dependencies]
protobuf-build = { path = "../protobuf-build" }

[patch.crates-io]
prost = { version = "0.5", path = "../prost" }
prost-derive = { version = "0.5", path = "../prost/prost-derive" }
prost-types = { version = "0.5", path = "../prost/prost-types" }
prost-build = { version = "0.5", path = "../prost/prost-build" }
grpcio-compiler = { path = "../grpc-rs/compiler" }
