[package]
name = "prost-bench"
version = "0.1.0"
authors = ["Nick Cameron <nrc@ncameron.org>"]
edition = "2018"
build = "build.rs"

[[bin]]
name = "proto"
path = "src/bin/proto.rs"

[dependencies]
jemallocator = "0.3.0"
futures = "0.1"
prost = { version = "0.5" }
prost-derive = { version = "0.5" }
bytes = "0.4"
protobuf = "2"
grpcio = { version = "0.5.0-alpha.1", path = "../grpc-rs", features = [ "secure", "prost-codec" ], default-features = false }
lazy_static = "1.3"

[build-dependencies]
protobuf-build = "0"

#[patch.crates-io]
#protobuf-build = { path = "../protobuf-build" }
#prost = { version = "0.5", path = "../prost" }
#prost-derive = { version = "0.5", path = "../prost/prost-derive" }
#prost-types = { version = "0.5", path = "../prost/prost-types" }
#prost-build = { version = "0.5", path = "../prost/prost-build" }
#grpcio-compiler = { path = "../grpc-rs/compiler" }
